[PR] Add newlines